Fixed some more alignment issues

--- a/basestyles.css
+++ b/basestyles.css
@@ -150,7 +150,7 @@ p {
     position: relative;
     margin-left: auto;
     margin-top: -10px;
-    padding: 50px;
+    padding: 2%;
     border-color: brown;
     border-width: 10px;
 }
@@ -173,7 +173,10 @@ p {
     padding: 10px;
     max-width: fit-content;
     margin-top: -50px;
-    top: 10px;
+    margin-bottom: 50px;
+    top: 50px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 
